- Fixed spacing in about page to take into account new header/footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,73 +166,8 @@ nav {
   }
 }
 
-
 /*****************************
-Bottom call-to-action
-*****************************/
-
-.bottomCta-container {
-  max-width: 1040px;
-  margin: 160px auto 0 auto;
-  padding: 0 40px;
-}
-
-.bottomCta-container a {
-  font-weight: 900;
-}
-
-/*****************************
-Footer
-*****************************/
-
-footer {
-  color: rgb(44, 45, 51); /*Dark Night*/
-  background: rgba(44, 45, 51, 0.05); /*Dark Night*/
-  margin-top: 40px;
-}
-
-.footerContent-container {
-  max-width: 1040px;
-  margin: auto;
-  padding: 40px 40px 16px 40px;
-}
-
-.footer-separator {
-  height: 16px; 
-  width: 80px;
-  margin-bottom: 4px;
-  background: papayawhip;
-}
-
-.footer-section a {
-  font-weight: 900;
-}
-
-.footer-section .footer-linkContainer:not(:first-child) {
-  margin-top: 8px;
-}
-
-.footer-linkContainer {
-  display: flex;
-}
-
-.footer-linkContainer .footer-link {
-  margin-left: 8px;
-} 
-
-.footer-section.is-postscript {
-  margin-top: 24px;
-  font-weight: 700;
-}
-
-@media screen and (max-width: 1023px) {
-}
-
-@media screen and (max-width: 767px) {
-}
-
-/*****************************
-Work
+Above fold
 *****************************/
 
 .aboveFold-container {
@@ -266,6 +201,66 @@ Work
     max-width: 304px;
     margin: auto;
   }
+}
+
+
+/*****************************
+Bottom call-to-action
+*****************************/
+
+.bottomCta-container {
+  max-width: 1040px;
+  margin: 160px auto 0 auto;
+  padding: 0 40px;
+}
+
+.bottomCta-container a {
+  font-weight: 900;
+}
+
+/*****************************
+Footer
+*****************************/
+
+footer {
+  color: rgb(44, 45, 51); /*Dark Night*/
+  background: rgba(44, 45, 51, 0.05); /*Dark Night*/
+  margin-top: 40px;
+}
+
+.footerContent-container {
+  max-width: 1040px;
+  margin: auto;
+  padding: 40px;
+}
+
+.footer-separator {
+  height: 16px; 
+  width: 80px;
+  margin-bottom: 4px;
+  background: papayawhip;
+}
+
+.footer-section a {
+  font-weight: 900;
+}
+
+.footer-section .footer-linkContainer:not(:first-child) {
+  margin-top: 8px;
+}
+
+.footer-linkContainer {
+  display: flex;
+}
+
+.footer-linkContainer .footer-link {
+  margin-left: 8px;
+} 
+
+@media screen and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
 }
 
 /*****************************
@@ -320,8 +315,6 @@ Projects
 
 .caseStudy-link a {
   font-weight: 900;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 .caseStudy-imageContainer {
@@ -376,29 +369,24 @@ Projects
 About
 *****************************/
 
-.about-main {
+.about-cardContainer {
   max-width: 1040px;
   padding: 0 40px;
-  margin: auto;
+  margin: 160px auto 0 auto;
 }
 
-.about-background {
+.about-cardStyle {
   padding: 80px 0;
-  margin: 40px 0;
   background: rgba(44, 45, 51, 0.05); /*Dark Night*/
   box-shadow: 8px 8px 40px rgba(131,143,160,0.2), 
               -8px 8px 40px rgba(131,143,160,0.2);
 }
 
-.about-container {
+.about-contentContainer {
   max-width: 800px;
-  padding: 0 32px;
   margin: auto;
-}
-
-.about-content {
+  padding: 0 32px;
   display: flex;
-  margin-top: 40px;
 }
 
 .about-imageContainer {
